--- a/src/my-new-view.html
+++ b/src/my-new-view.html
@@ -12,18 +12,21 @@
         <style>
              :host {
                 display: block;
-                --icon-toggle-color: lightgrey;
+                --icon-toggle-color: white;
                 --icon-toggle-outline-color: black;
                 --icon-toggle-pressed-color: red;
                 padding: 16px;
             }
         </style>
 
-        <h1>New view</h1>
+        <h1>Search Bar</h1>
         <paper-search-bar hide-filter-button="true" placeholder="Enter search term"></paper-search-bar>
+        <h1>Slider</h1>
         <paper-slider min="-100" max="100" value="50"></paper-slider>
-        <icon-toggle toggle-icon="star"></icon-toggle>
+        <h1>Icon Favourite</h1>
+        <icon-toggle toggle-icon="favorite"></icon-toggle>
         <my-log-element></my-log-element>
+        <h1>Youtube Video</h1>
         <google-youtube thumbnail="http://img.youtube.com/vi/M7lc1UVf-VE/0.jpg" video-id="M7lc1UVf-VE" height="270px" width="480px" rel="0" start="5" autoplay="0">
         </google-youtube>
     </template>
