--- a/src/my-app.html
+++ b/src/my-app.html
@@ -66,7 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <app-drawer>
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-                    <a name="view1" href="/view1">View One</a>
+                    <a name="timeline" href="/timeline">Timeline</a>
                     <a name="view2" href="/view2">View Two</a>
                     <a name="view3" href="/view3">View Three</a>
                     <a name="new-view" href="/new-view">New View</a>
@@ -79,12 +79,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <app-header condenses reveals effects="waterfall">
                     <app-toolbar>
                         <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-                        <div main-title>My App</div>
+                        <div main-title>Tubeterest</div>
                     </app-toolbar>
                 </app-header>
 
                 <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
-                    <my-view1 name="view1"></my-view1>
+                    <my-timeline name="timeline"></my-timeline>
                     <my-view2 name="view2"></my-view2>
                     <my-view3 name="view3"></my-view3>
                     <my-new-view name="new-view"></my-new-view>
