--- a/src/my-new-view.html
+++ b/src/my-new-view.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../bower_components/paper-search/paper-search-bar.html">
 <link rel="import" href="my-icon-toggle.html">
 <link rel="import" href="my-log-element.html">
+<link rel="import" href="my-listener-icon.html">
 
 <dom-module id="my-new-view">
     <!-- Defines the element's style and local DOM -->
@@ -29,6 +30,8 @@
         <h1>Youtube Video</h1>
         <google-youtube thumbnail="http://img.youtube.com/vi/M7lc1UVf-VE/0.jpg" video-id="M7lc1UVf-VE" height="270px" width="480px" rel="0" start="5" autoplay="0">
         </google-youtube>
+        <h1>Listener Item</h1>
+        <my-listener-icon></my-listener-icon>
     </template>
     <!-- Creates the element's prototype and registers it -->
     <script>
