--- a/src/my-youtube-video.html
+++ b/src/my-youtube-video.html
@@ -1,12 +1,13 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/google-youtube/google-youtube.html">
 <link rel="import" href="my-icon-toggle.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-youtube-video">
     <template>
-        <style include="shared-styles">
+        <style include="shared-styles" is="custom-style">
              :host {
                 display: block;
                 padding: 10px;
@@ -19,19 +20,54 @@
                 display: inline;
                 ;
                 margin-left: 10px;
-                /*background-color: #9e9e9e;*/
-                color: red;
+                background-color: #9e9e9e;
+                color: white;
                 border-radius: 5px;
-                font-size: 15px;
+                font-size: 12px;
                 padding: 5px;
                 font-style: italic;
+            }
+
+            icon-toggle {
+                margin-left: 10px;
+            }
+
+            .likeText[hidden] {
+                display: none;
+            }
+
+            .card {
+                padding: 50px;
+            }
+
+            .flex {
+                @apply(--layout-horizontal);
+                @apply(--layout-center);
+            }
+
+            .flex1child {
+                @apply(--layout-flex-1);
+            }
+
+            .flex2child {
+                @apply(--layout-flex-2);
+            }
+
+            .flex3child {
+                @apply(--layout-flex-3);
             }
         </style>
 
         <div class="card">
             <!-- <div class="circle">1</div> -->
-            <h1 id="title">Title <span><icon-toggle pressed="{{isFav}}" toggle-icon="favorite"></icon-toggle><span class="likeText">[[seeMessage(isFav)]]</span></span></h1>
-            <google-youtube thumbnail="http://img.youtube.com/vi/[[videoId]]/0.jpg" video-id="[[videoId]]" height="270px" width="480px" rel="0" autoplay="0"></google-youtube>
+            <h1 id="title">[[videoTitle]]<span><icon-toggle pressed="{{isFav}}" toggle-icon="favorite"></icon-toggle><span class="likeText" hidden$="{{!isFav}}">Liked!</span></span></h1>
+            <div class="flex">
+                <google-youtube class="flex3child" thumbnail="http://img.youtube.com/vi/[[videoId]]/0.jpg" video-id="[[videoId]]" rel="0" autoplay="0"></google-youtube>
+                <p class="flex2child">
+                    [[videoDescription]]
+                </p>
+            </div>
+
         </div>
     </template>
     <script>
@@ -40,16 +76,11 @@
             properties: {
                 videoId: {
                     type: String
+                },
+                videoTitle: {
+                    type: String
                 }
             },
-            seeMessage: function(fav) {
-                if (fav) {
-                    return "Liked!";
-
-                } else {
-                    return "";
-                }
-            }
         });
     </script>
 </dom-module>
