--- a/src/my-app.html
+++ b/src/my-app.html
@@ -67,9 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
                     <a name="timeline" href="/timeline">Timeline</a>
-                    <a name="view2" href="/view2">View Two</a>
-                    <a name="view3" href="/view3">View Three</a>
-                    <a name="new-view" href="/new-view">New View</a>
+                    <a name="favorites" href="/favorites">Favorites</a>
                 </iron-selector>
             </app-drawer>
 
@@ -85,9 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                 <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
                     <my-timeline name="timeline"></my-timeline>
-                    <my-view2 name="view2"></my-view2>
-                    <my-view3 name="view3"></my-view3>
-                    <my-new-view name="new-view"></my-new-view>
+                    <my-favorites name="favorites"></my-favorites>
                     <my-view404 name="view404"></my-view404>
                 </iron-pages>
             </app-header-layout>
