--- a/src/my-app.html
+++ b/src/my-app.html
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             ],
 
             _routePageChanged: function(page) {
-                this.page = page || 'view1';
+                this.page = page || 'timeline';
             },
 
             _pageChanged: function(page) {
