--- a/src/my-app.html
+++ b/src/my-app.html
@@ -19,8 +19,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="my-icons.html">
+<link rel="import" href="./language-behavior.html">
 
 <dom-module id="my-app">
     <template>
@@ -56,6 +58,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 color: black;
                 font-weight: bold;
             }
+
+            paper-toggle-button {
+                display: inline-block;
+            }
         </style>
 
         <app-location route="{{route}}"></app-location>
@@ -66,8 +72,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <app-drawer>
                 <app-toolbar>Menu</app-toolbar>
                 <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-                    <a name="timeline" href="/timeline">Timeline</a>
-                    <a name="favorites" href="/favorites">Favorites</a>
+                    <a name="timeline" href="/timeline">{{localize('timeline')}}</a>
+                    <a name="favorites" href="/favorites">{{localize('favorites')}}</a>
+                    <a name="testview" href="/testview">{{localize('test')}}</a>
                 </iron-selector>
             </app-drawer>
 
@@ -78,13 +85,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <app-toolbar>
                         <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                         <div main-title>Tubeterest</div>
+                        <div class="lang">
+                            <span title="english"> 🇬🇧 </span>
+                            <paper-toggle-button on-change="_toggleLanguage" id="switch"></paper-toggle-button>
+                            <span title="french"> 🇪🇸 </span>
+                        </div>
                     </app-toolbar>
                 </app-header>
 
                 <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
-                    <my-timeline name="timeline"></my-timeline>
-                    <my-favorites name="favorites"></my-favorites>
-                    <my-view404 name="view404"></my-view404>
+                    <my-timeline stored-favs="{{storedFavs}}" name="timeline" language="{{language}}"></my-timeline>
+                    <my-favorites stored-favs="{{storedFavs}}" name="favorites" language="{{language}}"></my-favorites>
+                    <my-testview name="testview" language="{{language}}"></my-testview>
+                    <my-view404 language="{{language}}" name="view404"></my-view404>
                 </iron-pages>
             </app-header-layout>
         </app-drawer-layout>
@@ -93,18 +106,36 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script>
         Polymer({
             is: 'my-app',
-
+            behaviors: [
+                LanguageBehavior
+            ],
             properties: {
                 page: {
                     type: String,
                     reflectToAttribute: true,
                     observer: '_pageChanged'
-                }
+                },
+                storedFavs: {
+                    type: Array,
+                    notify: true,
+                    value: function() {
+                        return JSON.parse(localStorage.getItem("favorites")) || [];
+                    }
+                },
+                language: {
+                    value: 'en',
+                    type: String
+                },
+
             },
 
             observers: [
-                '_routePageChanged(routeData.page)'
+                '_routePageChanged(routeData.page)',
             ],
+
+            ready: function() {
+                console.log(this.storedFavs);
+            },
 
             _routePageChanged: function(page) {
                 this.page = page || 'timeline';
@@ -118,6 +149,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             _showPage404: function() {
                 this.page = 'view404';
+            },
+            attached: function() {
+                this.loadResources(this.resolveUrl('locales.json'));
+            },
+            _toggleLanguage: function() {
+                this.language = this.$.switch.checked ? 'es' : 'en';
             }
         });
     </script>
