--- a/src/my-view404.html
+++ b/src/my-view404.html
@@ -9,23 +9,35 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="./language-behavior.html">
 
 <dom-module id="my-view404">
-  <template>
-    <style>
-      :host {
-        display: block;
+    <template>
+        <style>
+             :host {
+                display: block;
+                padding: 10px 20px;
+            }
+        </style>
 
-        padding: 10px 20px;
-      }
-    </style>
+        Oops you hit a 404. <a href="/">Head back to home.</a>
+    </template>
 
-    Oops you hit a 404. <a href="/">Head back to home.</a>
-  </template>
-
-  <script>
-    Polymer({
-      is: 'my-view404'
-    });
-  </script>
+    <script>
+        Polymer({
+            is: 'my-view404',
+            behaviors: [
+                LanguageBehavior
+            ],
+            properties: {
+                language: {
+                    value: 'en',
+                    type: String
+                },
+            },
+            attached: function() {
+                this.loadResources(this.resolveUrl('locales.json'));
+            },
+        });
+    </script>
 </dom-module>
